@@ -26,28 +26,29 @@
 
 package jdk.incubator.foreign;
 
-import java.io.FileDescriptor;
-import java.lang.ref.Cleaner;
+import java.io.UncheckedIOException;
 import java.nio.ByteBuffer;
 
 import jdk.internal.foreign.AbstractMemorySegmentImpl;
 import jdk.internal.foreign.HeapMemorySegmentImpl;
 import jdk.internal.foreign.MappedMemorySegmentImpl;
+import jdk.internal.foreign.ResourceScopeImpl;
 import jdk.internal.foreign.NativeMemorySegmentImpl;
-import jdk.internal.foreign.Utils;
+import jdk.internal.reflect.CallerSensitive;
+import jdk.internal.reflect.Reflection;
 
 import java.io.IOException;
 import java.nio.channels.FileChannel;
 import java.nio.file.Path;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Spliterator;
+import java.util.stream.Stream;
 
 /**
  * A memory segment models a contiguous region of memory. A memory segment is associated with both spatial
- * and temporal bounds. Spatial bounds ensure that memory access operations on a memory segment cannot affect a memory location
+ * and temporal bounds (e.g. a {@link ResourceScope}). Spatial bounds ensure that memory access operations on a memory segment cannot affect a memory location
  * which falls <em>outside</em> the boundaries of the memory segment being accessed. Temporal bounds ensure that memory access
- * operations on a segment cannot occur after a memory segment has been closed (see {@link MemorySegment#close()}).
+ * operations on a segment cannot occur after the resource scope associated with a memory segment has been closed (see {@link ResourceScope#close()}).
  * <p>
  * All implementations of this interface must be <a href="{@docRoot}/java.base/java/lang/doc-files/ValueBased.html">value-based</a>;
  * programmers should treat instances that are {@linkplain Object#equals(Object) equal} as interchangeable and should not
@@ -62,8 +63,8 @@ import java.util.Spliterator;
  * <h2>Constructing memory segments</h2>
  *
  * There are multiple ways to obtain a memory segment. First, memory segments backed by off-heap memory can
- * be allocated using one of the many factory methods provided (see {@link MemorySegment#allocateNative(MemoryLayout)},
- * {@link MemorySegment#allocateNative(long)} and {@link MemorySegment#allocateNative(long, long)}). Memory segments obtained
+ * be allocated using one of the many factory methods provided (see {@link MemorySegment#allocateNative(MemoryLayout, ResourceScope)},
+ * {@link MemorySegment#allocateNative(long, ResourceScope)} and {@link MemorySegment#allocateNative(long, long, ResourceScope)}). Memory segments obtained
  * in this way are called <em>native memory segments</em>.
  * <p>
  * It is also possible to obtain a memory segment backed by an existing heap-allocated Java array,
@@ -77,161 +78,89 @@ import java.util.Spliterator;
  * depending on the characteristics of the byte buffer instance the segment is associated with. For instance, a buffer memory
  * segment obtained from a byte buffer created with the {@link ByteBuffer#allocateDirect(int)} method will be backed
  * by native memory.
- * <p>
- * Finally, it is also possible to obtain a memory segment backed by a memory-mapped file using the factory method
- * {@link MemorySegment#mapFile(Path, long, long, FileChannel.MapMode)}. Such memory segments are called <em>mapped memory segments</em>;
- * mapped memory segments are associated with an underlying file descriptor. For more operations on mapped memory segments, please refer to the
- * {@link MappedMemorySegments} class.
- * <p>
- * Array and buffer segments are effectively <em>views</em> over existing memory regions which might outlive the
- * lifecycle of the segments derived from them, and can even be manipulated directly (e.g. via array access, or direct use
- * of the {@link ByteBuffer} API) by other clients. As a result, while sharing array or buffer segments is possible,
- * it is strongly advised that clients wishing to do so take extra precautions to make sure that the underlying memory sources
- * associated with such segments remain inaccessible, and that said memory sources are never aliased by more than one segment
- * at a time - e.g. so as to prevent concurrent modifications of the contents of an array, or buffer segment.
  *
- * <h2>Explicit deallocation</h2>
+ * <h2>Mapping memory segments from files</h2>
  *
- * Memory segments are closed explicitly (see {@link MemorySegment#close()}). When a segment is closed, it is no longer
- * <em>alive</em> (see {@link #isAlive()}, and subsequent operation on the segment (or on any {@link MemoryAddress} instance
- * derived from it) will fail with {@link IllegalStateException}.
+ * It is also possible to obtain a native memory segment backed by a memory-mapped file using the factory method
+ * {@link MemorySegment#mapFile(Path, long, long, FileChannel.MapMode, ResourceScope)}. Such native memory segments are
+ * called <em>mapped memory segments</em>; mapped memory segments are associated with an underlying file descriptor.
  * <p>
- * Closing a segment might trigger the releasing of the underlying memory resources associated with said segment, depending on
- * the kind of memory segment being considered:
- * <ul>
- *     <li>closing a native memory segment results in <em>freeing</em> the native memory associated with it</li>
- *     <li>closing a mapped memory segment results in the backing memory-mapped file to be unmapped</li>
- *     <li>closing a buffer, or a heap segment does not have any side-effect, other than marking the segment
- *     as <em>not alive</em> (see {@link MemorySegment#isAlive()}). Also, since the buffer and heap segments might keep
- *     strong references to the original buffer or array instance, it is the responsibility of clients to ensure that
- *     these segments are discarded in a timely manner, so as not to prevent garbage collection to reclaim the underlying
- *     objects.</li>
- * </ul>
- *
- * <h2><a id = "access-modes">Access modes</a></h2>
- *
- * Memory segments supports zero or more <em>access modes</em>. Supported access modes are {@link #READ},
- * {@link #WRITE}, {@link #CLOSE}, {@link #SHARE} and {@link #HANDOFF}. The set of access modes supported by a segment alters the
- * set of operations that are supported by that segment. For instance, attempting to call {@link #close()} on
- * a segment which does not support the {@link #CLOSE} access mode will result in an exception.
+ * Contents of mapped memory segments can be {@linkplain #force() persisted} and {@linkplain #load() loaded} to and from the underlying file;
+ * these capabilities are suitable replacements for some of the functionality in the {@link java.nio.MappedByteBuffer} class.
+ * Note that, while it is possible to map a segment into a byte buffer (see {@link MemorySegment#asByteBuffer()}),
+ * and then call e.g. {@link java.nio.MappedByteBuffer#force()} that way, this can only be done when the source segment
+ * is small enough, due to the size limitation inherent to the ByteBuffer API.
  * <p>
- * The set of supported access modes can only be made stricter (by supporting <em>fewer</em> access modes). This means
- * that restricting the set of access modes supported by a segment before sharing it with other clients
- * is generally a good practice if the creator of the segment wants to retain some control over how the segment
- * is going to be accessed.
+ * Clients requiring sophisticated, low-level control over mapped memory segments, should consider writing
+ * custom mapped memory segment factories; using {@link CLinker}, e.g. on Linux, it is possible to call {@code mmap}
+ * with the desired parameters; the returned address can be easily wrapped into a memory segment, using
+ * {@link MemoryAddress#ofLong(long)} and {@link MemoryAddress#asSegment(long, Runnable, ResourceScope)}.
+ *
+ * <h2>Lifecycle and confinement</h2>
+ *
+ * Memory segments are associated with a resource scope (see {@link ResourceScope}), which can be accessed using
+ * the {@link #scope()} method. As for all resources associated with a resource scope, a segment cannot be
+ * accessed after its corresponding scope has been closed. For instance, the following code will result in an
+ * exception:
+ * <blockquote><pre>{@code
+MemorySegment segment = null;
+try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+    segment = MemorySegment.allocateNative(8, 1, scope);
+}
+MemoryAccess.getLong(segment); // already closed!
+ * }</pre></blockquote>
+ * Additionally, access to a memory segment is subject to the thread-confinement checks enforced by the owning scope; that is,
+ * if the segment is associated with a shared scope, it can be accessed by multiple threads; if it is associated with a confined
+ * scope, it can only be accessed by the thread which owns the scope.
+ * <p>
+ * Heap and buffer segments are always associated with a <em>global</em>, shared scope. This scope cannot be closed,
+ * and can be considered as <em>always alive</em>.
  *
  * <h2>Memory segment views</h2>
  *
- * Memory segments support <em>views</em>. For instance, it is possible to alter the set of supported access modes,
- * by creating an <em>immutable</em> view of a memory segment, as follows:
+ * Memory segments support <em>views</em>. For instance, it is possible to create an <em>immutable</em> view of a memory segment, as follows:
  * <blockquote><pre>{@code
 MemorySegment segment = ...
-MemorySegment roSegment = segment.withAccessModes(segment.accessModes() & ~WRITE);
+MemorySegment roSegment = segment.asReadOnly();
  * }</pre></blockquote>
  * It is also possible to create views whose spatial bounds are stricter than the ones of the original segment
  * (see {@link MemorySegment#asSlice(long, long)}).
  * <p>
- * Temporal bounds of the original segment are inherited by the view; that is, closing a segment view, such as a sliced
- * view, will cause the original segment to be closed; as such special care must be taken when sharing views
- * between multiple clients. If a client want to protect itself against early closure of a segment by
- * another actor, it is the responsibility of that client to take protective measures, such as removing {@link #CLOSE}
- * from the set of supported access modes, before sharing the view with another client.
+ * Temporal bounds of the original segment are inherited by the views; that is, when the scope associated with a segment
+ * is closed, all the views associated with that segment will also be rendered inaccessible.
  * <p>
  * To allow for interoperability with existing code, a byte buffer view can be obtained from a memory segment
  * (see {@link #asByteBuffer()}). This can be useful, for instance, for those clients that want to keep using the
  * {@link ByteBuffer} API, but need to operate on large memory segments. Byte buffers obtained in such a way support
- * the same spatial and temporal access restrictions associated to the memory segment from which they originated.
+ * the same spatial and temporal access restrictions associated with the memory segment from which they originated.
  *
- * <h2><a id = "thread-confinement">Thread confinement</a></h2>
+ * <h2>Stream support</h2>
  *
- * Memory segments support strong thread-confinement guarantees. Upon creation, they are assigned an <em>owner thread</em>,
- * typically the thread which initiated the creation operation. After creation, only the owner thread will be allowed
- * to directly manipulate the memory segment (e.g. close the memory segment) or access the underlying memory associated with
- * the segment using a memory access var handle. Any attempt to perform such operations from a thread other than the
- * owner thread will result in a runtime failure.
- * <p>
- * The {@link #handoff(Thread)} method can be used to change the thread-confinement properties of a memory segment.
- * This method is, like {@link #close()}, a <em>terminal operation</em> which marks the original segment as not alive
- * (see {@link #isAlive()}) and creates a <em>new</em> segment with the desired thread-confinement properties. Calling
- * {@link #handoff(Thread)} is only possible if the segment features the corresponding {@link #HANDOFF} access mode.
- * <p>
- * For instance, if a client wants to transfer ownership of a segment to another (known) thread, it can do so as follows:
+ * A client might obtain a {@link Stream} from a segment, which can then be used to slice the segment (according to a given
+ * element layout) and even allow multiple threads to work in parallel on disjoint segment slices
+ * (to do this, the segment has to be associated with a shared scope). The following code can be used to sum all int
+ * values in a memory segment in parallel:
  *
  * <blockquote><pre>{@code
-MemorySegment segment = ...
-MemorySegment aSegment = segment.handoff(threadA);
- * }</pre></blockquote>
- *
- * By doing so, the original segment is marked as not alive, and a new segment is returned whose owner thread
- * is {@code threadA}; this allows, for instance, for two threads {@code A} and {@code B} to share
- * a segment in a controlled, cooperative and race-free fashion (also known as <em>serial thread confinement</em>).
- * <p>
- * Alternatively, the {@link #share()} method can be used to remove thread ownership altogether; this is only possible
- * if the segment features the corresponding {@link #SHARE} access mode. The following code shows how clients can
- * obtain a shared segment:
- *
- * <blockquote><pre>{@code
-MemorySegment segment = ...
-MemorySegment sharedSegment = segment.share();
- * }</pre></blockquote>
- *
- * Again here, the original segment is marked as not alive, and a new <em>shared</em> segment is returned which features no owner
- * thread (e.g. {@link #ownerThread()} returns {@code null}). This might be useful when multiple threads need to process
- * the contents of the same memory segment concurrently (e.g. in the case of parallel processing). For instance, a client
- * might obtain a {@link Spliterator} from a shared segment, which can then be used to slice the segment and allow multiple
- * threads to work in parallel on disjoint segment slices. The following code can be used to sum all int values in a memory segment in parallel:
- *
- * <blockquote><pre>{@code
-SequenceLayout SEQUENCE_LAYOUT = MemoryLayout.ofSequence(1024, MemoryLayouts.JAVA_INT);
-try (MemorySegment segment = MemorySegment.allocateNative(SEQUENCE_LAYOUT).share()) {
+try (ResourceScope scope = ResourceScope.newSharedScope()) {
+    SequenceLayout SEQUENCE_LAYOUT = MemoryLayout.sequenceLayout(1024, MemoryLayouts.JAVA_INT);
+    MemorySegment segment = MemorySegment.allocateNative(SEQUENCE_LAYOUT, scope);
     VarHandle VH_int = SEQUENCE_LAYOUT.elementLayout().varHandle(int.class);
-    int sum = StreamSupport.stream(segment.spliterator(SEQUENCE_LAYOUT), true)
+    int sum = segment.elements(MemoryLayouts.JAVA_INT).parallel()
                            .mapToInt(s -> (int)VH_int.get(s.address()))
                            .sum();
 }
  * }</pre></blockquote>
  *
- * Once shared, a segment can be claimed back by a given thread (again using {@link #handoff(Thread)}); in fact, many threads
- * can attempt to gain ownership of the same segment, concurrently, and only one of them is guaranteed to succeed.
- * <p>
- * When using shared segments, clients should make sure that no other thread is accessing the segment while
- * the segment is being closed. If one or more threads attempts to access a segment concurrently while the
- * segment is being closed, an exception might occur on both the accessing and the closing threads. Clients should
- * refrain from attempting to close a segment repeatedly (e.g. keep calling {@link #close()} until no exception is thrown);
- * such exceptions should instead be seen as an indication that the client code is lacking appropriate synchronization between the threads
- * accessing/closing the segment.
- *
- * <h2>Implicit deallocation</h2>
- *
- * Clients can register a memory segment against a {@link Cleaner}, to make sure that underlying resources associated with
- * that segment will be released when the segment becomes <em>unreachable</em>, which can be useful to prevent native memory
- * leaks. This can be achieved using the {@link #registerCleaner(Cleaner)} method, as follows:
- *
- * <blockquote><pre>{@code
-MemorySegment segment = ...
-MemorySegment gcSegment = segment.registerCleaner(cleaner);
- * }</pre></blockquote>
- *
- * Here, the original segment is marked as not alive, and a new segment is returned (the owner thread of the returned
- * segment set is set to that of the current thread, see {@link #ownerThread()}); the new segment
- * will also be registered with the the {@link Cleaner} instance provided to the {@link #registerCleaner(Cleaner)} method;
- * as such, if not closed explicitly (see {@link #close()}), the new segment will be automatically closed by the cleaner.
- *
- * @apiNote In the future, if the Java language permits, {@link MemorySegment}
- * may become a {@code sealed} interface, which would prohibit subclassing except by other explicitly permitted subtypes.
- *
  * @implSpec
  * Implementations of this interface are immutable, thread-safe and <a href="{@docRoot}/java.base/java/lang/doc-files/ValueBased.html">value-based</a>.
  */
-public interface MemorySegment extends Addressable, AutoCloseable {
+public sealed interface MemorySegment extends Addressable permits AbstractMemorySegmentImpl {
 
     /**
-     * The base memory address associated with this memory segment. The returned address is
-     * a <em>checked</em> memory address and can therefore be used in dereference operations
-     * (see {@link MemoryAddress}).
+     * The base memory address associated with this memory segment.
+     * The returned memory address is associated with same resource scope as that associated with this segment.
      * @return The base memory address.
-     * @throws IllegalStateException if this segment is not <em>alive</em>, or if access occurs from a thread other than the
-     * thread owning this segment
      */
     @Override
     MemoryAddress address();
@@ -241,60 +170,47 @@ public interface MemorySegment extends Addressable, AutoCloseable {
      * {@link Spliterator#SUBSIZED}, {@link Spliterator#IMMUTABLE}, {@link Spliterator#NONNULL} and {@link Spliterator#ORDERED}
      * characteristics.
      * <p>
-     * The returned spliterator splits this segment according to the specified sequence layout; that is,
-     * if the supplied layout is a sequence layout whose element count is {@code N}, then calling {@link Spliterator#trySplit()}
-     * will result in a spliterator serving approximatively {@code N/2} elements (depending on whether N is even or not).
-     * As such, splitting is possible as long as {@code N >= 2}. The spliterator returns segments that feature the same
-     * <a href="#access-modes">access modes</a> as the given segment less the {@link #CLOSE} access mode.
+     * The returned spliterator splits this segment according to the specified element layout; that is,
+     * if the supplied layout has size N, then calling {@link Spliterator#trySplit()} will result in a spliterator serving
+     * approximately {@code S/N/2} elements (depending on whether N is even or not), where {@code S} is the size of
+     * this segment. As such, splitting is possible as long as {@code S/N >= 2}. The spliterator returns segments that feature the same
+     * scope as this given segment.
      * <p>
      * The returned spliterator effectively allows to slice this segment into disjoint sub-segments, which can then
-     * be processed in parallel by multiple threads (if the segment is shared).
+     * be processed in parallel by multiple threads.
      *
-     * @param layout the layout to be used for splitting.
+     * @param elementLayout the layout to be used for splitting.
      * @return the element spliterator for this segment
-     * @throws IllegalStateException if the segment is not <em>alive</em>, or if access occurs from a thread other than the
-     * thread owning this segment
+     * @throws IllegalArgumentException if the {@code elementLayout} size is zero, or the segment size modulo the
+     * {@code elementLayout} size is greater than zero.
      */
-    Spliterator<MemorySegment> spliterator(SequenceLayout layout);
+    Spliterator<MemorySegment> spliterator(MemoryLayout elementLayout);
 
     /**
-     * The thread owning this segment.
-     * @return the thread owning this segment.
+     * Returns a sequential {@code Stream} over disjoint slices (whose size matches that of the specified layout)
+     * in this segment. Calling this method is equivalent to the following code:
+     * <blockquote><pre>{@code
+    StreamSupport.stream(segment.spliterator(elementLayout), false);
+     * }</pre></blockquote>
+     *
+     * @param elementLayout the layout to be used for splitting.
+     * @return a sequential {@code Stream} over disjoint slices in this segment.
+     * @throws IllegalArgumentException if the {@code elementLayout} size is zero, or the segment size modulo the
+     * {@code elementLayout} size is greater than zero.
      */
-    Thread ownerThread();
+    Stream<MemorySegment> elements(MemoryLayout elementLayout);
+
+    /**
+     * Returns the resource scope associated with this memory segment.
+     * @return the resource scope associated with this memory segment.
+     */
+    ResourceScope scope();
 
     /**
      * The size (in bytes) of this memory segment.
      * @return The size (in bytes) of this memory segment.
      */
     long byteSize();
-
-    /**
-     * Obtains a segment view with specific <a href="#access-modes">access modes</a>. Supported access modes are {@link #READ}, {@link #WRITE},
-     * {@link #CLOSE}, {@link #SHARE} and {@link #HANDOFF}. It is generally not possible to go from a segment with stricter access modes
-     * to one with less strict access modes. For instance, attempting to add {@link #WRITE} access mode to a read-only segment
-     * will be met with an exception.
-     * @param accessModes an ORed mask of zero or more access modes.
-     * @return a segment view with specific access modes.
-     * @throws IllegalArgumentException when {@code mask} is an access mask which is less strict than the one supported by this
-     * segment, or when {@code mask} contains bits not associated with any of the supported access modes.
-     */
-    MemorySegment withAccessModes(int accessModes);
-
-    /**
-     * Does this segment support a given set of access modes?
-     * @param accessModes an ORed mask of zero or more access modes.
-     * @return true, if the access modes in {@code accessModes} are stricter than the ones supported by this segment.
-     * @throws IllegalArgumentException when {@code mask} contains bits not associated with any of the supported access modes.
-     */
-    boolean hasAccessModes(int accessModes);
-
-    /**
-     * Returns the <a href="#access-modes">access modes</a> associated with this segment; the result is represented as ORed values from
-     * {@link #READ}, {@link #WRITE}, {@link #CLOSE}, {@link #SHARE} and {@link #HANDOFF}.
-     * @return the access modes associated with this segment.
-     */
-    int accessModes();
 
     /**
      * Obtains a new memory segment view whose base address is the same as the base address of this segment plus a given offset,
@@ -377,133 +293,36 @@ public interface MemorySegment extends Addressable, AutoCloseable {
     }
 
     /**
+     * Is this segment read-only?
+     * @return {@code true}, if this segment is read-only.
+     * @see #asReadOnly()
+     */
+    boolean isReadOnly();
+
+    /**
+     * Obtains a read-only view of this segment. The resulting segment will be identical to this one, but
+     * attempts to overwrite the contents of the returned segment will cause runtime exceptions.
+     * @return a read-only view of this segment
+     * @see #isReadOnly()
+     */
+    MemorySegment asReadOnly();
+
+    /**
+     * Is this a native segment? Returns true if this segment is a native memory segment,
+     * created using the {@link #allocateNative(long, ResourceScope)} (and related) factory, or a buffer segment
+     * derived from a direct {@link java.nio.ByteBuffer} using the {@link #ofByteBuffer(ByteBuffer)} factory,
+     * or if this is a {@linkplain #isMapped() mapped} segment.
+     * @return {@code true} if this segment is native segment.
+     */
+    boolean isNative();
+
+    /**
      * Is this a mapped segment? Returns true if this segment is a mapped memory segment,
-     * created using the {@link #mapFile(Path, long, long, FileChannel.MapMode)} factory, or a buffer segment
+     * created using the {@link #mapFile(Path, long, long, FileChannel.MapMode, ResourceScope)} factory, or a buffer segment
      * derived from a {@link java.nio.MappedByteBuffer} using the {@link #ofByteBuffer(ByteBuffer)} factory.
      * @return {@code true} if this segment is a mapped segment.
      */
     boolean isMapped();
-
-    /**
-     * Is this segment alive?
-     * @return true, if the segment is alive.
-     * @see MemorySegment#close()
-     */
-    boolean isAlive();
-
-    /**
-     * Closes this memory segment. This is a <em>terminal operation</em>; as a side-effect, if this operation completes
-     * without exceptions, this segment will be marked as <em>not alive</em>, and subsequent operations on this segment
-     * will fail with {@link IllegalStateException}.
-     * <p>
-     * Depending on the kind of memory segment being closed, calling this method further triggers deallocation of all the resources
-     * associated with the memory segment.
-     *
-     * @apiNote This operation is not idempotent; that is, closing an already closed segment <em>always</em> results in an
-     * exception being thrown. This reflects a deliberate design choice: segment state transitions should be
-     * manifest in the client code; a failure in any of these transitions reveals a bug in the underlying application
-     * logic. This is especially useful when reasoning about the lifecycle of dependent segment views (see {@link #asSlice(MemoryAddress)},
-     * where closing one segment might side-effect multiple segments. In such cases it might in fact not be obvious, looking
-     * at the code, as to whether a given segment is alive or not.
-     *
-     * @throws IllegalStateException if this segment is not <em>alive</em>, or if access occurs from a thread other than the
-     * thread owning this segment, or if this segment is shared and the segment is concurrently accessed while this method is
-     * called.
-     * @throws UnsupportedOperationException if this segment does not support the {@link #CLOSE} access mode.
-     */
-    void close();
-
-    /**
-     * Obtains a new confined memory segment backed by the same underlying memory region as this segment. The returned segment will
-     * be confined on the specified thread, and will feature the same spatial bounds and access modes (see {@link #accessModes()})
-     * as this segment.
-     * <p>
-     * This is a <em>terminal operation</em>; as a side-effect, if this operation completes
-     * without exceptions, this segment will be marked as <em>not alive</em>, and subsequent operations on this segment
-     * will fail with {@link IllegalStateException}.
-     * <p>
-     * In case where the owner thread of the returned segment differs from that of this segment, write accesses to this
-     * segment's content <a href="../../../java/util/concurrent/package-summary.html#MemoryVisibility"><i>happens-before</i></a>
-     * hand-over from the current owner thread to the new owner thread, which in turn <i>happens before</i> read accesses
-     * to the returned segment's contents on the new owner thread.
-     *
-     * @param thread the new owner thread
-     * @return a new confined memory segment whose owner thread is set to {@code thread}.
-     * @throws IllegalStateException if this segment is not <em>alive</em>, or if access occurs from a thread other than the
-     * thread owning this segment.
-     * @throws UnsupportedOperationException if this segment does not support the {@link #HANDOFF} access mode.
-     */
-    MemorySegment handoff(Thread thread);
-
-    /**
-     * Obtains a new confined memory segment backed by the same underlying memory region as this segment, but whose
-     * temporal bounds are controlled by the provided {@link NativeScope} instance.
-     * <p>
-     * This is a <em>terminal operation</em>;
-     * as a side-effect, this segment will be marked as <em>not alive</em>, and subsequent operations on this segment
-     * will fail with {@link IllegalStateException}.
-     * <p>
-     * The returned segment will feature only {@link MemorySegment#READ} and {@link MemorySegment#WRITE} access modes
-     * (assuming these were available in the original segment). As such the returned segment cannot be closed directly
-     * using {@link MemorySegment#close()} - but it will be closed indirectly when this native scope is closed. The
-     * returned segment will also be confined by the same thread as the provided native scope (see {@link NativeScope#ownerThread()}).
-     * <p>
-     * In case where the owner thread of the returned segment differs from that of this segment, write accesses to this
-     * segment's content <a href="../../../java/util/concurrent/package-summary.html#MemoryVisibility"><i>happens-before</i></a>
-     * hand-over from the current owner thread to the new owner thread, which in turn <i>happens before</i> read accesses
-     * to the returned segment's contents on the new owner thread.
-     *
-     * @param nativeScope the native scope.
-     * @return a new confined memory segment backed by the same underlying memory region as this segment, but whose life-cycle
-     * is tied to that of {@code nativeScope}.
-     * @throws IllegalStateException if this segment is not <em>alive</em>, or if access occurs from a thread other than the
-     * thread owning this segment.
-     * @throws UnsupportedOperationException if this segment does not support the {@link #HANDOFF} access mode.
-     */
-    MemorySegment handoff(NativeScope nativeScope);
-
-    /**
-     * Obtains a new shared memory segment backed by the same underlying memory region as this segment. The returned segment will
-     * not be confined on any thread and can therefore be accessed concurrently from multiple threads; moreover, the
-     * returned segment will feature the same spatial bounds and access modes (see {@link #accessModes()})
-     * as this segment.
-     * <p>
-     * This is a <em>terminal operation</em>; as a side-effect, if this operation completes
-     * without exceptions, this segment will be marked as <em>not alive</em>, and subsequent operations on this segment
-     * will fail with {@link IllegalStateException}.
-     * <p>
-     * Write accesses to this segment's content <a href="../../../java/util/concurrent/package-summary.html#MemoryVisibility"><i>happens-before</i></a>
-     * hand-over from the current owner thread to the new owner thread, which in turn <i>happens before</i> read accesses
-     * to the returned segment's contents on a new thread.
-     *
-     * @return a new memory shared segment backed by the same underlying memory region as this segment.
-     * @throws IllegalStateException if this segment is not <em>alive</em>, or if access occurs from a thread other than the
-     * thread owning this segment.
-     */
-    MemorySegment share();
-
-    /**
-     * Register this memory segment instance against a {@link Cleaner} object, by returning a new memory segment backed
-     * by the same underlying memory region as this segment. The returned segment will feature the same confinement,
-     * spatial bounds and access modes (see {@link #accessModes()}) as this segment. Moreover, the returned segment
-     * will be associated with the specified {@link Cleaner} object; this allows for the segment to be closed
-     * as soon as it becomes <em>unreachable</em>, which might be helpful in preventing native memory leaks.
-     * <p>
-     * This is a <em>terminal operation</em>; as a side-effect, if this operation completes
-     * without exceptions, this segment will be marked as <em>not alive</em>, and subsequent operations on this segment
-     * will fail with {@link IllegalStateException}.
-     * <p>
-     * The implicit deallocation behavior associated with the returned segment will be preserved under terminal
-     * operations such as {@link #handoff(Thread)} and {@link #share()}.
-     *
-     * @param cleaner the cleaner object, responsible for implicit deallocation of the returned segment.
-     * @return a new memory segment backed by the same underlying memory region as this segment, which features
-     * implicit deallocation.
-     * @throws IllegalStateException if this segment is not <em>alive</em>, or if access occurs from a thread other than the
-     * thread owning this segment, or if this segment is already associated with a cleaner.
-     * @throws UnsupportedOperationException if this segment does not support the {@link #CLOSE} access mode.
-     */
-    MemorySegment registerCleaner(Cleaner cleaner);
 
     /**
      * Fills a value into this memory segment.
@@ -526,9 +345,9 @@ for (long l = 0; l < segment.byteSize(); l++) {
      *
      * @param value the value to fill into this segment
      * @return this memory segment
-     * @throws IllegalStateException if this segment is not <em>alive</em>, or if access occurs from a thread other than the
-     * thread owning this segment
-     * @throws UnsupportedOperationException if this segment does not support the {@link #WRITE} access mode
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope,
+     * @throws UnsupportedOperationException if this segment is read-only (see {@link #isReadOnly()}).
      */
     MemorySegment fill(byte value);
 
@@ -543,23 +362,22 @@ for (long l = 0; l < segment.byteSize(); l++) {
      * <p>
      * The result of a bulk copy is unspecified if, in the uncommon case, the source segment and this segment
      * do not overlap, but refer to overlapping regions of the same backing storage using different addresses.
-     * For example, this may occur if the same file is {@link MemorySegment#mapFile mapped} to two segments.
+     * For example, this may occur if the same file is {@linkplain MemorySegment#mapFile mapped} to two segments.
      *
      * @param src the source segment.
      * @throws IndexOutOfBoundsException if {@code src.byteSize() > this.byteSize()}.
-     * @throws IllegalStateException if either the source segment or this segment have been already closed,
-     * or if access occurs from a thread other than the thread owning either segment.
-     * @throws UnsupportedOperationException if either the source segment or this segment do not feature required access modes;
-     * more specifically, {@code src} should feature at least the {@link MemorySegment#READ} access mode,
-     * while this segment should feature at least the {@link MemorySegment#WRITE} access mode.
+     * @throws IllegalStateException if either the scope associated with the source segment or the scope associated
+     * with this segment have been already closed, or if access occurs from a thread other than the thread owning either
+     * scopes.
+     * @throws UnsupportedOperationException if this segment is read-only (see {@link #isReadOnly()}).
      */
     void copyFrom(MemorySegment src);
 
     /**
      * Finds and returns the offset, in bytes, of the first mismatch between
      * this segment and a given other segment. The offset is relative to the
-     * {@link #address() base address} of each segment and will be in the
-     * range of 0 (inclusive) up to the {@link #byteSize() size} (in bytes) of
+     * {@linkplain #address() base address} of each segment and will be in the
+     * range of 0 (inclusive) up to the {@linkplain #byteSize() size} (in bytes) of
      * the smaller memory segment (exclusive).
      * <p>
      * If the two segments share a common prefix then the returned offset is
@@ -573,18 +391,99 @@ for (long l = 0; l < segment.byteSize(); l++) {
      * @param other the segment to be tested for a mismatch with this segment
      * @return the relative offset, in bytes, of the first mismatch between this
      * and the given other segment, otherwise -1 if no mismatch
-     * @throws IllegalStateException if either this segment of the other segment
-     * have been already closed, or if access occurs from a thread other than the
-     * thread owning either segment
-     * @throws UnsupportedOperationException if either this segment or the other
-     * segment does not feature at least the {@link MemorySegment#READ} access mode
+     * @throws IllegalStateException if either the scope associated with this segment or the scope associated
+     * with the {@code other} segment have been already closed, or if access occurs from a thread other than the thread
+     * owning either scopes.
      */
     long mismatch(MemorySegment other);
 
     /**
+     * Tells whether or not the contents of this mapped segment is resident in physical
+     * memory.
+     *
+     * <p> A return value of {@code true} implies that it is highly likely
+     * that all of the data in this segment is resident in physical memory and
+     * may therefore be accessed without incurring any virtual-memory page
+     * faults or I/O operations.  A return value of {@code false} does not
+     * necessarily imply that this segment's content is not resident in physical
+     * memory.
+     *
+     * <p> The returned value is a hint, rather than a guarantee, because the
+     * underlying operating system may have paged out some of this segment's data
+     * by the time that an invocation of this method returns.  </p>
+     *
+     * @return  {@code true} if it is likely that the contents of this segment
+     *          is resident in physical memory
+     *
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope.
+     * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
+     * {@code isMapped() == false}.
+     */
+    boolean isLoaded();
+
+    /**
+     * Loads the contents of this mapped segment into physical memory.
+     *
+     * <p> This method makes a best effort to ensure that, when it returns,
+     * this contents of this segment is resident in physical memory.  Invoking this
+     * method may cause some number of page faults and I/O operations to
+     * occur. </p>
+     *
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope.
+     * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
+     * {@code isMapped() == false}.
+     */
+    void load();
+
+    /**
+     * Unloads the contents of this mapped segment from physical memory.
+     *
+     * <p> This method makes a best effort to ensure that the contents of this segment are
+     * are no longer resident in physical memory. Accessing this segment's contents
+     * after invoking this method may cause some number of page faults and I/O operations to
+     * occur (as this segment's contents might need to be paged back in). </p>
+     *
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope.
+     * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
+     * {@code isMapped() == false}.
+     */
+    void unload();
+
+    /**
+     * Forces any changes made to the contents of this mapped segment to be written to the
+     * storage device described by the mapped segment's file descriptor.
+     *
+     * <p> If the file descriptor associated with this mapped segment resides on a local storage
+     * device then when this method returns it is guaranteed that all changes
+     * made to this segment since it was created, or since this method was last
+     * invoked, will have been written to that device.
+     *
+     * <p> If the file descriptor associated with this mapped segment does not reside on a local device then
+     * no such guarantee is made.
+     *
+     * <p> If this segment was not mapped in read/write mode ({@link
+     * java.nio.channels.FileChannel.MapMode#READ_WRITE}) then
+     * invoking this method may have no effect. In particular, the
+     * method has no effect for segments mapped in read-only or private
+     * mapping modes. This method may or may not have an effect for
+     * implementation-specific mapping modes.
+     * </p>
+     *
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope.
+     * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
+     * {@code isMapped() == false}.
+     * @throws UncheckedIOException if there is an I/O error writing the contents of this segment to the associated storage device
+     */
+    void force();
+
+    /**
      * Wraps this segment in a {@link ByteBuffer}. Some of the properties of the returned buffer are linked to
      * the properties of this segment. For instance, if this segment is <em>immutable</em>
-     * (e.g. the segment has access mode {@link #READ} but not {@link #WRITE}), then the resulting buffer is <em>read-only</em>
+     * (e.g. the segment is a read-only segment, see {@link #isReadOnly()}), then the resulting buffer is <em>read-only</em>
      * (see {@link ByteBuffer#isReadOnly()}. Additionally, if this is a native memory segment, the resulting buffer is
      * <em>direct</em> (see {@link ByteBuffer#isDirect()}).
      * <p>
@@ -593,14 +492,13 @@ for (long l = 0; l < segment.byteSize(); l++) {
      * are set to this segment' size (see {@link MemorySegment#byteSize()}). For this reason, a byte buffer cannot be
      * returned if this segment' size is greater than {@link Integer#MAX_VALUE}.
      * <p>
-     * The life-cycle of the returned buffer will be tied to that of this segment. That means that if the this segment
-     * is closed (see {@link MemorySegment#close()}, accessing the returned
-     * buffer will throw an {@link IllegalStateException}.
+     * The life-cycle of the returned buffer will be tied to that of this segment. That is, accessing the returned buffer
+     * after the scope associated with this segment has been closed (see {@link ResourceScope#close()}, will throw an {@link IllegalStateException}.
      * <p>
-     * If this segment is <em>shared</em>, calling certain I/O operations on the resulting buffer might result in
-     * an unspecified exception being thrown. Examples of such problematic operations are {@link FileChannel#read(ByteBuffer)},
-     * {@link FileChannel#write(ByteBuffer)}, {@link java.nio.channels.SocketChannel#read(ByteBuffer)} and
-     * {@link java.nio.channels.SocketChannel#write(ByteBuffer)}.
+     * If this segment is associated with a confined scope, calling read/write I/O operations on the resulting buffer
+     * might result in an unspecified exception being thrown. Examples of such problematic operations are
+     * {@link java.nio.channels.AsynchronousSocketChannel#read(ByteBuffer)} and
+     * {@link java.nio.channels.AsynchronousSocketChannel#write(ByteBuffer)}.
      * <p>
      * Finally, the resulting buffer's byte order is {@link java.nio.ByteOrder#BIG_ENDIAN}; this can be changed using
      * {@link ByteBuffer#order(java.nio.ByteOrder)}.
@@ -608,83 +506,70 @@ for (long l = 0; l < segment.byteSize(); l++) {
      * @return a {@link ByteBuffer} view of this memory segment.
      * @throws UnsupportedOperationException if this segment cannot be mapped onto a {@link ByteBuffer} instance,
      * e.g. because it models an heap-based segment that is not based on a {@code byte[]}), or if its size is greater
-     * than {@link Integer#MAX_VALUE}, or if the segment does not support the {@link #READ} access mode.
+     * than {@link Integer#MAX_VALUE}.
      */
     ByteBuffer asByteBuffer();
 
     /**
      * Copy the contents of this memory segment into a fresh byte array.
      * @return a fresh byte array copy of this memory segment.
-     * @throws UnsupportedOperationException if this segment does not feature the {@link #READ} access mode, or if this
-     * segment's contents cannot be copied into a {@link byte[]} instance, e.g. its size is greater than {@link Integer#MAX_VALUE},
-     * @throws IllegalStateException if this segment has been closed, or if access occurs from a thread other than the
-     * thread owning this segment.
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope, or if this segment's contents cannot be copied into a {@link byte[]} instance,
+     * e.g. its size is greater than {@link Integer#MAX_VALUE}.
      */
     byte[] toByteArray();
 
     /**
      * Copy the contents of this memory segment into a fresh short array.
      * @return a fresh short array copy of this memory segment.
-     * @throws UnsupportedOperationException if this segment does not feature the {@link #READ} access mode, or if this
-     * segment's contents cannot be copied into a {@link short[]} instance, e.g. because {@code byteSize() % 2 != 0},
-     * or {@code byteSize() / 2 > Integer#MAX_VALUE}.
-     * @throws IllegalStateException if this segment has been closed, or if access occurs from a thread other than the
-     * thread owning this segment.
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope, or if this segment's contents cannot be copied into a {@link short[]} instance,
+     * e.g. because {@code byteSize() % 2 != 0}, or {@code byteSize() / 2 > Integer#MAX_VALUE}
      */
     short[] toShortArray();
 
     /**
      * Copy the contents of this memory segment into a fresh char array.
      * @return a fresh char array copy of this memory segment.
-     * @throws UnsupportedOperationException if this segment does not feature the {@link #READ} access mode, or if this
-     * segment's contents cannot be copied into a {@link char[]} instance, e.g. because {@code byteSize() % 2 != 0},
-     * or {@code byteSize() / 2 > Integer#MAX_VALUE}.
-     * @throws IllegalStateException if this segment has been closed, or if access occurs from a thread other than the
-     * thread owning this segment.
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope, or if this segment's contents cannot be copied into a {@link char[]} instance,
+     * e.g. because {@code byteSize() % 2 != 0}, or {@code byteSize() / 2 > Integer#MAX_VALUE}.
      */
     char[] toCharArray();
 
     /**
      * Copy the contents of this memory segment into a fresh int array.
      * @return a fresh int array copy of this memory segment.
-     * @throws UnsupportedOperationException if this segment does not feature the {@link #READ} access mode, or if this
-     * segment's contents cannot be copied into a {@link int[]} instance, e.g. because {@code byteSize() % 4 != 0},
-     * or {@code byteSize() / 4 > Integer#MAX_VALUE}.
-     * @throws IllegalStateException if this segment has been closed, or if access occurs from a thread other than the
-     * thread owning this segment.
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope, or if this segment's contents cannot be copied into a {@link int[]} instance,
+     * e.g. because {@code byteSize() % 4 != 0}, or {@code byteSize() / 4 > Integer#MAX_VALUE}.
      */
     int[] toIntArray();
 
     /**
      * Copy the contents of this memory segment into a fresh float array.
      * @return a fresh float array copy of this memory segment.
-     * @throws UnsupportedOperationException if this segment does not feature the {@link #READ} access mode, or if this
-     * segment's contents cannot be copied into a {@link float[]} instance, e.g. because {@code byteSize() % 4 != 0},
-     * or {@code byteSize() / 4 > Integer#MAX_VALUE}.
-     * @throws IllegalStateException if this segment has been closed, or if access occurs from a thread other than the
-     * thread owning this segment.
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope, or if this segment's contents cannot be copied into a {@link float[]} instance,
+     * e.g. because {@code byteSize() % 4 != 0}, or {@code byteSize() / 4 > Integer#MAX_VALUE}.
      */
     float[] toFloatArray();
 
     /**
      * Copy the contents of this memory segment into a fresh long array.
      * @return a fresh long array copy of this memory segment.
-     * @throws UnsupportedOperationException if this segment does not feature the {@link #READ} access mode, or if this
-     * segment's contents cannot be copied into a {@link long[]} instance, e.g. because {@code byteSize() % 8 != 0},
-     * or {@code byteSize() / 8 > Integer#MAX_VALUE}.
-     * @throws IllegalStateException if this segment has been closed, or if access occurs from a thread other than the
-     * thread owning this segment.
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope, or if this segment's contents cannot be copied into a {@link long[]} instance,
+     * e.g. because {@code byteSize() % 8 != 0}, or {@code byteSize() / 8 > Integer#MAX_VALUE}.
      */
     long[] toLongArray();
 
     /**
      * Copy the contents of this memory segment into a fresh double array.
      * @return a fresh double array copy of this memory segment.
-     * @throws UnsupportedOperationException if this segment does not feature the {@link #READ} access mode, or if this
-     * segment's contents cannot be copied into a {@link double[]} instance, e.g. because {@code byteSize() % 8 != 0},
-     * or {@code byteSize() / 8 > Integer#MAX_VALUE}.
-     * @throws IllegalStateException if this segment has been closed, or if access occurs from a thread other than the
-     * thread owning this segment.
+     * @throws IllegalStateException if the scope associated with this segment has been closed, or if access occurs from
+     * a thread other than the thread owning that scope, or if this segment's contents cannot be copied into a {@link double[]} instance,
+     * e.g. because {@code byteSize() % 8 != 0}, or {@code byteSize() / 8 > Integer#MAX_VALUE}.
      */
     double[] toDoubleArray();
 
@@ -693,15 +578,15 @@ for (long l = 0; l < segment.byteSize(); l++) {
      * buffer. The segment starts relative to the buffer's position (inclusive)
      * and ends relative to the buffer's limit (exclusive).
      * <p>
-     * The segment will feature all <a href="#access-modes">access modes</a> (see {@link #ALL_ACCESS}),
-     * unless the given buffer is {@linkplain ByteBuffer#isReadOnly() read-only} in which case the segment will
-     * not feature the {@link #WRITE} access mode, and its confinement thread is the current thread (see {@link Thread#currentThread()}).
+     * If the buffer is {@link ByteBuffer#isReadOnly() read-only}, the resulting segment will also be
+     * {@link ByteBuffer#isReadOnly() read-only}. The scope associated with this segment can either be the
+     * {@linkplain ResourceScope#globalScope() global} resource scope, in case the buffer has been created independently,
+     * or to some other (possibly closeable) resource scope, in case the buffer has been obtained using {@link #asByteBuffer()}.
      * <p>
-     * The resulting memory segment keeps a reference to the backing buffer, to ensure it remains <em>reachable</em>
-     * for the life-time of the segment.
+     * The resulting memory segment keeps a reference to the backing buffer, keeping it <em>reachable</em>.
      *
      * @param bb the byte buffer backing the buffer memory segment.
-     * @return a new confined buffer memory segment.
+     * @return a new buffer memory segment.
      */
     static MemorySegment ofByteBuffer(ByteBuffer bb) {
         return AbstractMemorySegmentImpl.ofBuffer(bb);
@@ -709,13 +594,10 @@ for (long l = 0; l < segment.byteSize(); l++) {
 
     /**
      * Creates a new confined array memory segment that models the memory associated with a given heap-allocated byte array.
-     * <p>
-     * The resulting memory segment keeps a reference to the backing array, to ensure it remains <em>reachable</em>
-     * for the life-time of the segment. The segment will feature all <a href="#access-modes">access modes</a>
-     * (see {@link #ALL_ACCESS}), and its confinement thread is the current thread (see {@link Thread#currentThread()}).
+     * The returned segment's resource scope is set to the {@linkplain ResourceScope#globalScope() global} resource scope.
      *
      * @param arr the primitive array backing the array memory segment.
-     * @return a new confined array memory segment.
+     * @return a new array memory segment.
      */
     static MemorySegment ofArray(byte[] arr) {
         return HeapMemorySegmentImpl.OfByte.fromArray(arr);
@@ -723,13 +605,10 @@ for (long l = 0; l < segment.byteSize(); l++) {
 
     /**
      * Creates a new confined array memory segment that models the memory associated with a given heap-allocated char array.
-     * <p>
-     * The resulting memory segment keeps a reference to the backing array, to ensure it remains <em>reachable</em>
-     * for the life-time of the segment. The segment will feature all <a href="#access-modes">access modes</a>
-     * (see {@link #ALL_ACCESS}), and its confinement thread is the current thread (see {@link Thread#currentThread()}).
+     * The returned segment's resource scope is set to the {@linkplain ResourceScope#globalScope() global} resource scope.
      *
      * @param arr the primitive array backing the array memory segment.
-     * @return a new confined array memory segment.
+     * @return a new array memory segment.
      */
     static MemorySegment ofArray(char[] arr) {
         return HeapMemorySegmentImpl.OfChar.fromArray(arr);
@@ -737,13 +616,10 @@ for (long l = 0; l < segment.byteSize(); l++) {
 
     /**
      * Creates a new confined array memory segment that models the memory associated with a given heap-allocated short array.
-     * <p>
-     * The resulting memory segment keeps a reference to the backing array, to ensure it remains <em>reachable</em>
-     * for the life-time of the segment. The segment will feature all <a href="#access-modes">access modes</a>
-     * (see {@link #ALL_ACCESS}), and its confinement thread is the current thread (see {@link Thread#currentThread()}).
+     * The returned segment's resource scope is set to the {@linkplain ResourceScope#globalScope() global} resource scope.
      *
      * @param arr the primitive array backing the array memory segment.
-     * @return a new confined array memory segment.
+     * @return a new array memory segment.
      */
     static MemorySegment ofArray(short[] arr) {
         return HeapMemorySegmentImpl.OfShort.fromArray(arr);
@@ -751,13 +627,10 @@ for (long l = 0; l < segment.byteSize(); l++) {
 
     /**
      * Creates a new confined array memory segment that models the memory associated with a given heap-allocated int array.
-     * <p>
-     * The resulting memory segment keeps a reference to the backing array, to ensure it remains <em>reachable</em>
-     * for the life-time of the segment. The segment will feature all <a href="#access-modes">access modes</a>
-     * (see {@link #ALL_ACCESS}), and its confinement thread is the current thread (see {@link Thread#currentThread()}).
+     * The returned segment's resource scope is set to the {@linkplain ResourceScope#globalScope() global} resource scope.
      *
      * @param arr the primitive array backing the array memory segment.
-     * @return a new confined array memory segment.
+     * @return a new array memory segment.
      */
     static MemorySegment ofArray(int[] arr) {
         return HeapMemorySegmentImpl.OfInt.fromArray(arr);
@@ -765,13 +638,10 @@ for (long l = 0; l < segment.byteSize(); l++) {
 
     /**
      * Creates a new confined array memory segment that models the memory associated with a given heap-allocated float array.
-     * <p>
-     * The resulting memory segment keeps a reference to the backing array, to ensure it remains <em>reachable</em>
-     * for the life-time of the segment. The segment will feature all <a href="#access-modes">access modes</a>
-     * (see {@link #ALL_ACCESS}), and its confinement thread is the current thread (see {@link Thread#currentThread()}).
+     * The returned segment's resource scope is set to the {@linkplain ResourceScope#globalScope() global} resource scope.
      *
      * @param arr the primitive array backing the array memory segment.
-     * @return a new confined array memory segment.
+     * @return a new array memory segment.
      */
     static MemorySegment ofArray(float[] arr) {
         return HeapMemorySegmentImpl.OfFloat.fromArray(arr);
@@ -779,13 +649,10 @@ for (long l = 0; l < segment.byteSize(); l++) {
 
     /**
      * Creates a new confined array memory segment that models the memory associated with a given heap-allocated long array.
-     * <p>
-     * The resulting memory segment keeps a reference to the backing array, to ensure it remains <em>reachable</em>
-     * for the life-time of the segment. The segment will feature all <a href="#access-modes">access modes</a>
-     * (see {@link #ALL_ACCESS}), and its confinement thread is the current thread (see {@link Thread#currentThread()}).
+     * The returned segment's resource scope is set to the {@linkplain ResourceScope#globalScope() global} resource scope.
      *
      * @param arr the primitive array backing the array memory segment.
-     * @return a new confined array memory segment.
+     * @return a new array memory segment.
      */
     static MemorySegment ofArray(long[] arr) {
         return HeapMemorySegmentImpl.OfLong.fromArray(arr);
@@ -793,65 +660,99 @@ for (long l = 0; l < segment.byteSize(); l++) {
 
     /**
      * Creates a new confined array memory segment that models the memory associated with a given heap-allocated double array.
-     * <p>
-     * The resulting memory segment keeps a reference to the backing array, to ensure it remains <em>reachable</em>
-     * for the life-time of the segment. The segment will feature all <a href="#access-modes">access modes</a>
-     * (see {@link #ALL_ACCESS}).
+     * The returned segment's resource scope is set to the {@linkplain ResourceScope#globalScope() global} resource scope.
      *
      * @param arr the primitive array backing the array memory segment.
-     * @return a new confined array memory segment.
+     * @return a new array memory segment.
      */
     static MemorySegment ofArray(double[] arr) {
         return HeapMemorySegmentImpl.OfDouble.fromArray(arr);
     }
 
     /**
-     * Creates a new confined native memory segment that models a newly allocated block of off-heap memory with given layout.
+     * Creates a new confined native memory segment that models a newly allocated block of off-heap memory with given layout
+     * and resource scope. A client is responsible make sure that the resource scope associated with the returned segment is closed
+     * when the segment is no longer in use. Failure to do so will result in off-heap memory leaks.
      * <p>
      * This is equivalent to the following code:
      * <blockquote><pre>{@code
-    allocateNative(layout.bytesSize(), layout.bytesAlignment());
+    allocateNative(layout.bytesSize(), layout.bytesAlignment(), scope);
      * }</pre></blockquote>
-     *
-     * @implNote The block of off-heap memory associated with the returned native memory segment is initialized to zero.
-     * Moreover, a client is responsible to call the {@link MemorySegment#close()} on a native memory segment,
-     * to make sure the backing off-heap memory block is deallocated accordingly. Failure to do so will result in off-heap memory leaks.
+     * <p>
+     * The block of off-heap memory associated with the returned native memory segment is initialized to zero.
      *
      * @param layout the layout of the off-heap memory block backing the native memory segment.
+     * @param scope the segment scope.
      * @return a new native memory segment.
      * @throws IllegalArgumentException if the specified layout has illegal size or alignment constraint.
+     * @throws IllegalStateException if {@code scope} has been already closed, or if access occurs from a thread other
+     * than the thread owning {@code scope}.
      */
-    static MemorySegment allocateNative(MemoryLayout layout) {
+    static MemorySegment allocateNative(MemoryLayout layout, ResourceScope scope) {
+        Objects.requireNonNull(scope);
         Objects.requireNonNull(layout);
-        return allocateNative(layout.byteSize(), layout.byteAlignment());
+        return allocateNative(layout.byteSize(), layout.byteAlignment(), scope);
     }
 
     /**
-     * Creates a new confined native memory segment that models a newly allocated block of off-heap memory with given size (in bytes).
+     * Creates a new confined native memory segment that models a newly allocated block of off-heap memory with given size (in bytes)
+     * and resource scope. A client is responsible make sure that the resource scope associated with the returned segment is closed
+     * when the segment is no longer in use. Failure to do so will result in off-heap memory leaks.
      * <p>
      * This is equivalent to the following code:
      * <blockquote><pre>{@code
-allocateNative(bytesSize, 1);
+    allocateNative(bytesSize, 1, scope);
      * }</pre></blockquote>
-     *
-     * @implNote The block of off-heap memory associated with the returned native memory segment is initialized to zero.
-     * Moreover, a client is responsible to call the {@link MemorySegment#close()} on a native memory segment,
-     * to make sure the backing off-heap memory block is deallocated accordingly. Failure to do so will result in off-heap memory leaks.
+     * <p>
+     * The block of off-heap memory associated with the returned native memory segment is initialized to zero.
      *
      * @param bytesSize the size (in bytes) of the off-heap memory block backing the native memory segment.
-     * @return a new confined native memory segment.
-     * @throws IllegalArgumentException if {@code bytesSize < 0}.
+     * @param scope the segment scope.
+     * @return a new native memory segment.
+     * @throws IllegalArgumentException if {@code bytesSize <= 0}.
+     * @throws IllegalStateException if {@code scope} has been already closed, or if access occurs from a thread other
+     * than the thread owning {@code scope}.
      */
-    static MemorySegment allocateNative(long bytesSize) {
-        return allocateNative(bytesSize, 1);
+    static MemorySegment allocateNative(long bytesSize, ResourceScope scope) {
+        return allocateNative(bytesSize, 1, scope);
     }
 
     /**
-     * Creates a new confined mapped memory segment that models a memory-mapped region of a file from a given path.
+     * Creates a new confined native memory segment that models a newly allocated block of off-heap memory with given size
+     * (in bytes), alignment constraint (in bytes) and resource scope. A client is responsible make sure that the resource
+     * scope associated with the returned segment is closed when the segment is no longer in use.
+     * Failure to do so will result in off-heap memory leaks.
      * <p>
-     * The segment will feature all <a href="#access-modes">access modes</a> (see {@link #ALL_ACCESS}),
-     * unless the given mapping mode is {@linkplain FileChannel.MapMode#READ_ONLY READ_ONLY}, in which case
-     * the segment will not feature the {@link #WRITE} access mode, and its confinement thread is the current thread (see {@link Thread#currentThread()}).
+     * The block of off-heap memory associated with the returned native memory segment is initialized to zero.
+     *
+     * @param bytesSize the size (in bytes) of the off-heap memory block backing the native memory segment.
+     * @param alignmentBytes the alignment constraint (in bytes) of the off-heap memory block backing the native memory segment.
+     * @param scope the segment scope.
+     * @return a new native memory segment.
+     * @throws IllegalArgumentException if {@code bytesSize <= 0}, {@code alignmentBytes <= 0}, or if {@code alignmentBytes}
+     * is not a power of 2.
+     * @throws IllegalStateException if {@code scope} has been already closed, or if access occurs from a thread other
+     * than the thread owning {@code scope}.
+     */
+    static MemorySegment allocateNative(long bytesSize, long alignmentBytes, ResourceScope scope) {
+        Objects.requireNonNull(scope);
+        if (bytesSize <= 0) {
+            throw new IllegalArgumentException("Invalid allocation size : " + bytesSize);
+        }
+
+        if (alignmentBytes <= 0 ||
+                ((alignmentBytes & (alignmentBytes - 1)) != 0L)) {
+            throw new IllegalArgumentException("Invalid alignment constraint : " + alignmentBytes);
+        }
+
+        return NativeMemorySegmentImpl.makeNativeSegment(bytesSize, alignmentBytes, (ResourceScopeImpl) scope);
+    }
+
+    /**
+     * Creates a new mapped memory segment that models a memory-mapped region of a file from a given path.
+     * <p>
+     * If the specified mapping mode is {@linkplain FileChannel.MapMode#READ_ONLY READ_ONLY}, the resulting segment
+     * will be read-only (see {@link #isReadOnly()}).
      * <p>
      * The content of a mapped memory segment can change at any time, for example
      * if the content of the corresponding region of the mapped file is changed by
@@ -874,10 +775,13 @@ allocateNative(bytesSize, 1);
      * @param bytesOffset the offset (expressed in bytes) within the file at which the mapped segment is to start.
      * @param bytesSize the size (in bytes) of the mapped memory backing the memory segment.
      * @param mapMode a file mapping mode, see {@link FileChannel#map(FileChannel.MapMode, long, long)}; the chosen mapping mode
-     *                might affect the behavior of the returned memory mapped segment (see {@link MappedMemorySegments#force(MemorySegment)}).
+     *                might affect the behavior of the returned memory mapped segment (see {@link #force()}).
+     * @param scope the segment scope.
      * @return a new confined mapped memory segment.
      * @throws IllegalArgumentException if {@code bytesOffset < 0}, {@code bytesSize < 0}, or if {@code path} is not associated
      * with the default file system.
+     * @throws IllegalStateException if {@code scope} has been already closed, or if access occurs from a thread other
+     * than the thread owning {@code scope}.
      * @throws UnsupportedOperationException if an unsupported map mode is specified.
      * @throws IOException if the specified path does not point to an existing file, or if some other I/O error occurs.
      * @throws  SecurityException If a security manager is installed and it denies an unspecified permission required by the implementation.
@@ -885,104 +789,33 @@ allocateNative(bytesSize, 1);
      * read access if the file is opened for reading. The {@link SecurityManager#checkWrite(String)} method is invoked to check
      * write access if the file is opened for writing.
      */
-    static MemorySegment mapFile(Path path, long bytesOffset, long bytesSize, FileChannel.MapMode mapMode) throws IOException {
-        return MappedMemorySegmentImpl.makeMappedSegment(path, bytesOffset, bytesSize, mapMode);
+    static MemorySegment mapFile(Path path, long bytesOffset, long bytesSize, FileChannel.MapMode mapMode, ResourceScope scope) throws IOException {
+        Objects.requireNonNull(scope);
+        return MappedMemorySegmentImpl.makeMappedSegment(path, bytesOffset, bytesSize, mapMode, (ResourceScopeImpl) scope);
     }
 
     /**
-     * Creates a new confined native memory segment that models a newly allocated block of off-heap memory with given size and
-     * alignment constraint (in bytes). The segment will feature all <a href="#access-modes">access modes</a>
-     * (see {@link #ALL_ACCESS}), and its confinement thread is the current thread (see {@link Thread#currentThread()}).
-     *
-     * @implNote The block of off-heap memory associated with the returned native memory segment is initialized to zero.
-     * Moreover, a client is responsible to call the {@link MemorySegment#close()} on a native memory segment,
-     * to make sure the backing off-heap memory block is deallocated accordingly. Failure to do so will result in off-heap memory leaks.
-     *
-     * @param bytesSize the size (in bytes) of the off-heap memory block backing the native memory segment.
-     * @param alignmentBytes the alignment constraint (in bytes) of the off-heap memory block backing the native memory segment.
-     * @return a new confined native memory segment.
-     * @throws IllegalArgumentException if {@code bytesSize < 0}, {@code alignmentBytes < 0}, or if {@code alignmentBytes}
-     * is not a power of 2.
-     */
-    static MemorySegment allocateNative(long bytesSize, long alignmentBytes) {
-        if (bytesSize <= 0) {
-            throw new IllegalArgumentException("Invalid allocation size : " + bytesSize);
-        }
-
-        if (alignmentBytes < 0 ||
-                ((alignmentBytes & (alignmentBytes - 1)) != 0L)) {
-            throw new IllegalArgumentException("Invalid alignment constraint : " + alignmentBytes);
-        }
-
-        return NativeMemorySegmentImpl.makeNativeSegment(bytesSize, alignmentBytes);
-    }
-
-    /**
-     * Returns a shared native memory segment whose base address is {@link MemoryAddress#NULL} and whose size is {@link Long#MAX_VALUE}.
+     * Returns a native memory segment whose base address is {@link MemoryAddress#NULL} and whose size is {@link Long#MAX_VALUE}.
      * This method can be very useful when dereferencing memory addresses obtained when interacting with native libraries.
-     * The segment will feature the {@link #READ} and {@link #WRITE} <a href="#access-modes">access modes</a>.
+     * The returned segment is associated with the <em>global</em> resource scope (see {@link ResourceScope#globalScope()}).
      * Equivalent to (but likely more efficient than) the following code:
      * <pre>{@code
-    MemoryAddress.NULL.asSegmentRestricted(Long.MAX_VALUE)
-                 .withOwnerThread(null)
-                 .withAccessModes(READ | WRITE);
+    MemoryAddress.NULL.asSegment(Long.MAX_VALUE)
      * }</pre>
      * <p>
-     * This method is <em>restricted</em>. Restricted methods are unsafe, and, if used incorrectly, their use might crash
+     * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
+     * Restricted methods are unsafe, and, if used incorrectly, their use might crash
      * the JVM or, worse, silently result in memory corruption. Thus, clients should refrain from depending on
      * restricted methods, and use safe and supported functionalities, where possible.
      *
      * @return a memory segment whose base address is {@link MemoryAddress#NULL} and whose size is {@link Long#MAX_VALUE}.
-     * @throws IllegalAccessError if the runtime property {@code foreign.restricted} is not set to either
-     * {@code permit}, {@code warn} or {@code debug} (the default value is set to {@code deny}).
+     * @throws IllegalCallerException if access to this method occurs from a module {@code M} and the command line option
+     * {@code --enable-native-access} is either absent, or does not mention the module name {@code M}, or
+     * {@code ALL-UNNAMED} in case {@code M} is an unnamed module.
      */
-    static MemorySegment ofNativeRestricted() {
-        Utils.checkRestrictedAccess("MemorySegment.ofNativeRestricted");
+    @CallerSensitive
+    static MemorySegment globalNativeSegment() {
+        Reflection.ensureNativeAccess(Reflection.getCallerClass());
         return NativeMemorySegmentImpl.EVERYTHING;
     }
-
-    // access mode masks
-
-    /**
-     * Read access mode; read operations are supported by a segment which supports this access mode.
-     * @see MemorySegment#accessModes()
-     * @see MemorySegment#withAccessModes(int)
-     */
-    int READ = 1;
-
-    /**
-     * Write access mode; write operations are supported by a segment which supports this access mode.
-     * @see MemorySegment#accessModes()
-     * @see MemorySegment#withAccessModes(int)
-     */
-    int WRITE = READ << 1;
-
-    /**
-     * Close access mode; calling {@link #close()} is supported by a segment which supports this access mode.
-     * @see MemorySegment#accessModes()
-     * @see MemorySegment#withAccessModes(int)
-     */
-    int CLOSE = WRITE << 1;
-
-    /**
-     * Share access mode; this segment support sharing with threads other than the owner thread (see {@link #share()}).
-     * @see MemorySegment#accessModes()
-     * @see MemorySegment#withAccessModes(int)
-     */
-    int SHARE = CLOSE << 1;
-
-    /**
-     * Handoff access mode; this segment support serial thread-confinement via thread ownership changes
-     * (see {@link #handoff(NativeScope)} and {@link #handoff(Thread)}).
-     * @see MemorySegment#accessModes()
-     * @see MemorySegment#withAccessModes(int)
-     */
-    int HANDOFF = SHARE << 1;
-
-    /**
-     * Default access mode; this is a union of all the access modes supported by memory segments.
-     * @see MemorySegment#accessModes()
-     * @see MemorySegment#withAccessModes(int)
-     */
-    int ALL_ACCESS = READ | WRITE | CLOSE | SHARE | HANDOFF;
 }
