@@ -26,7 +26,7 @@
  * @bug 8245194
  * @run main/othervm/java.security.policy=policy1 Security policy1
  * @run main/othervm/java.security.policy=policy2 Security policy2
- * @run main/othervm Security policy3
+ * @run main/othervm -Djava.security.manager=allow Security policy3
  * @summary Security test for Unix Domain socket and server socket channels
  */
 
